[package]
edition = "2021"
license = "apache-2.0"
name = "fractals"
version = "0.1.0"

[dependencies]
blas-src = { version = "0.10.0", features = ["accelerate"] }
image = "0.25.0"
indicatif = "0.17.8"
libc = "0.2.153"
mimalloc = "0.1.39"
ndarray = "0.15.6"
ndarray-linalg = { version = "0.16.0", default-features = false }
parking_lot = "0.12.1"
rand = "0.8.5"
rayon = "1.10.0"
rust-lzma = "0.6.0"

[profile.release]
lto = "thin"

[profile.dev]
opt-level = 3

[dev-dependencies]
expect-test = "1.5.0"
